--- a/styles.css
+++ b/styles.css
@@ -16,23 +16,24 @@ body{
     "header"
     "main"
     "footer";
-    grid-template-rows: auto 5fr 1fr;
+    grid-template-rows: auto 1fr auto;
+    background-color: #000000d8;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
 }
 
 .header{
     grid-area: header;
-    background-color: lightblue;
     padding: 10px;
 }
 
 .main{
     grid-area: main;
-    background-color: lightcoral;
 }
 
 .footer{
     grid-area: footer;
-    background-color: lightgoldenrodyellow;
 }
 
 .header__nav{
@@ -50,6 +51,12 @@ body{
 
 .header__link{
     display: flex;
+    color: white;
+    text-decoration: none;
+}
+
+.header__link:visited{
+    color: white;
 }
 
 .main{
@@ -60,9 +67,10 @@ body{
     gap: 20px;
 }
 
-.main__title-text{
-    font-size: 6rem;
-    font-family: Arial;
+.main__google-logo{
+    width: 300px;
+    position: relative;
+    top: 25px;
 }
 
 .main__file-input--hidden{
@@ -73,13 +81,84 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    padding: 3px 10px;
     width: 600px;
 
-    background-color: lightgray;
+    background-color: #4d5156;
     border-radius: 50px;
 }
 
 .main__search-bar .main__search-bar--left{
     display: flex;
+}
+
+.main__search-bar .main__search-bar--right{
+    display: flex;
+    gap: 10px;
+    padding: 2px;
+}
+
+.main__button{
+    display: flex;
+    gap: 10px;
+    border-radius: 50px;
+    width: 100px;
+    height: 35px;
+    padding: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.274);
+    justify-content: center;
+    align-items: center;
+    background-color: #4d5156;
+}
+
+.main__button-text{
+    color: white;
+}
+
+.main__search-input{
+    width: 410px;
+    border: none;
+    background: none;
+    outline: none;
+    margin-left: 10px;
+}
+
+.main__icon, .header__icon{
+    width: 20px;
+    align-content: center;
+    text-align: center;
+    filter: invert(1);
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__top{
+    border-bottom: 0.5px solid rgb(72, 72, 72);
+    background-color: #00000050;
+    height: 45px;
+    align-content: center;
+}
+
+.footer__text{
+    margin-left: 20px;
+}
+
+.footer__bottom{
+    display: flex;
+    justify-content: space-around;
+    background-color: #00000050;
+    height: 45px;
+    align-items: center;
+}
+
+.footer__list{
+    list-style: none;
+}
+
+.footer__list--left, .footer__list--right{
+    display: flex;
+    gap: 25px;
 }
